# firewall-blocklist

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yaml  requirements.txt
.ci_scripts/cross-compile/: translate_and_build.sh
.ci_scripts/firewall-test/: add_nft_rules.sh  run_cppcheck.sh  run_exec.sh  run_tests.sh  translate_and_build.sh  translate_profiles.sh
.ci_scripts/native-build/: add_nft_rules.sh  run_cppcheck.sh  run_tests.sh
.ci_scripts/test-build/: run_tests.sh
.github/workflows/: cross-compile.yml  full-test.yaml  test-build.yaml  test-firewall.yaml
include/: dns_map.h  nfqueue.h  packet_utils.h  rule_utils.h
include/parsers/: coap.h  dhcp.h  dns.h  header.h  http.h  igmp.h  ssdp.h
src/: dns_map.c  nflog.c  nfqueue.c  packet_utils.c  rule_utils.c
src/parsers/: coap.c  dhcp.c  dns.c  header.c  http.c  igmp.c  ssdp.c
src/translator/: NFQueue.py  Policy.py  arg_types.py  translator.py
src/translator/protocols/: Custom.py  Protocol.py  Transport.py  arp.py  coap.py  dhcp.py  dns.py  http.py  icmp.py  icmpv6.py  igmp.py  ip.py  ipv4.py  ipv6.py  mdns.py  ssdp.py  tcp.py  udp.py
src/translator/templates/: CMakeLists.txt.j2  callback.c.j2  firewall.nft.j2  header.c.j2  main.c.j2
test/: CMakeLists.txt
test/device/: CMakeLists.txt  firewall.nft  nfqueues.c
test/runtime/: Vagrantfile  dns_map.c  packet_utils.c  rule_utils.c
test/runtime/parsers/: coap.c  dhcp.c  dns.c  header.c  (+3 more)
test/translator/: CMakeLists.txt  translate.sh
test/unit/: CMakeLists.txt  Vagrantfile
(+3 files in other folders)
